Use database and form has been created

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 <div class="md-3">
-    <a href= "/user_register" class ="btn btn-outline-primary" > Create User</a>
+    <a href= "/user_reg" class ="btn btn-outline-primary" > Create User</a>
+    <a href= "/userdetail" class ="btn btn-outline-primary" > User Detail</a>
 </div>
 {% endblock body %}
