--- a/templates/user.html
+++ b/templates/user.html
@@ -4,10 +4,10 @@
   <div class ="register-box shadow-lg p-4 bg-white rounded" >
     <h1 class= "text-center"> Register new user</h1>
 
-    <form action ="/register" method = "POST" class="row g-3" >
+    <form action ="/user_reg" method = "POST" class="row g-3" >
       <div class="mb-3">
         <label for="fullname" class="form-label">Username</label>
-        <input type="text" class="form-control" name="fullname" id="fullname"  placeholder="Full Name" required>
+        <input type="text" class="form-control" name="name" id="name"  placeholder="Full Name" required>
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
@@ -17,18 +17,6 @@
         <label for="password" class="form-label">Password</label>
         <input type="Password" class="form-control" name="password" id="password" placeholder="*****" required>
       </div>
-      <div class="mb-3">
-        <label for="address" class="form-label">Address</label>
-        <input type="text" class="form-control" name="address" id="address" placeholder="Your Address" required>
-        <div class ="invalid-feedback">
-          Please enter your address
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="phone" class="form-label">Phone No</label>
-        <input type="text" class="form-control" name="phone" id="phone" placeholder="+977 ...." required>
-      </div>
-      
       <div class="text-center mt-4">
         <button type="submit" class="btn btn-primary">Register</button>
         <a href= '/login' class="btn btn-primary">Login</a> 
