--- a/templates/userdetail.html
+++ b/templates/userdetail.html
@@ -36,8 +36,8 @@
             <td>{{user_register.date_created}}</td>
             
             <td>
-                <a href="/updateuser/{{user_register.reg_no}}" type="button" class="btn btn-outline-success btn-sm mx-1">Update</button>
-                <a href="/delete_userdata/{{user_register.reg_no}}" type="button" class="btn btn-outline-warning btn-sm mx-1">Delete</button>
+                <a href="/updateuser/{{user_register.user_id}}" type="button" class="btn btn-outline-success btn-sm mx-1">Update</button>
+                <a href="/delete_userdata/{{user_register.user_id}}" type="button" class="btn btn-outline-warning btn-sm mx-1">Delete</button>
             </td>
         </tr>
         {% endfor %}
