--- a/templates/user.html
+++ b/templates/user.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
+
+
 <div class="container my-3 d-flex justify-content-center">
   <div class ="register-box shadow-lg p-4 bg-white rounded" >
     <h1 class= "text-center"> Register new user</h1>
 
-    <form action ="/user_reg" method = "POST" class="row g-3" >
+    <form action ="/user_reg" method = "POST" class="row g-3" onsubmit="return validateEmail()" >
       <div class="mb-3">
         <label for="fullname" class="form-label">Username</label>
         <input type="text" class="form-control" name="name" id="name"  placeholder="Full Name" required>
@@ -23,6 +25,21 @@
         <a href ="/" class="btn btn-secondary" data-bs-dismiss="modal">Close</a>
       </div>
     </form>
+    <script>
+      function validateEmail() {
+        let emailField = document.getElementById("email").value;
+        let emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+
+        if (!emailPattern.test(emailField)) {
+          alert("Please enter a valid email address.");
+          return false; // Prevent form submission
+        }
+
+        alert("Registration successful!");
+        return true;  // Allow form submission
+
+      }
+    </script>
   </div>
 </div>
 {% endblock body %}
