User: User can easily login into add their task

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,6 @@
 <div class="md-3">
     <a href= "/user_reg" class ="btn btn-outline-primary" > Create User</a>
     <a href= "/userdetail" class ="btn btn-outline-primary" > User Detail</a>
+    <a href= "/login" class ="btn btn-outline-primary" > Login</a>
 </div>
 {% endblock body %}
