Add Category: User can add their task with category i.e. personal and work

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,5 +4,6 @@
     
     <a href= "/tasklog" class ="btn btn-outline-primary" > Create TaskLog</a>
     <a href= "/tasklogdetail" class ="btn btn-outline-primary" > Task Detail</a>
+    <a href= "/completed_task" class ="btn btn-outline-primary" > Completed Task</a>
 </div>
 {% endblock body %}
