--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,7 @@ nav{
 /*Register html edit css part start from here*/
 .register-box{
     width: 400px;
-    background: linear-gradient(to right, lightblue, pink);
+    background: linear-gradient(to right, #fdf6ec, #8b5e3c);
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.8);
     padding: 20px;
