Add status: User can mark their task as done and pending. Likewise Frontend of dashboard, complete task and pending task has been updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -151,3 +151,11 @@ nav{
   .col-md-6{
     color: black;
   }
+
+
+  .loginclass{
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    font-style: italic;
+  }
