--- a/templates/home.html
+++ b/templates/home.html
@@ -15,19 +15,40 @@
           <div class="col-md-5 offset-md-1">
             <div class="form-box">
               <form action="/login" method="POST">
-                <h3> Login</h3>
+                <h3 class="loginclass"> Login</h3>
+
                 <div class="form-group">
-                  <label>Email</label>
-                  <input type="text" class="form-control" id="email" name="email" required placeholder=" Enter your ...@gmail.com">
+                  <label> Email:-</label>
                 </div>
-                <div class="form-group">
-                  <label>Password</label>
+
+                <div class="input-group">                  
+                  <span class="input-group-text">
+                    <i class="bi bi-envelope text-black fs-5 me-1"></i> <!-- Bootstrap Icons -->
+                  </span>
+                  <input type="email" class="form-control" id="email" name="email" required placeholder="Enter your ...@gmail.com">
+                </div>
+                
+                <div class= "form-group">
+                  <label> Password:-</label>
+                </div>
+                <div class="input-group">
+                  <span class="input-group-text">
+                    <i class="bi bi-key"></i>
+                  </span>
                   <input type="password" class="form-control" id="password" name="password" placeholder="Enter your **** Password">
                 </div>
-                <div class="form-group">
-                  <label>Repeat password</label>
-                  <input type="password" class="form-control" id="password" name="password" placeholder="Repeat **** Password">
+                
+
+                <div class= "form-group">
+                  <label>Repeat Password:-</label>
                 </div>
+                <div class="input-group">
+                  <span class="input-group-text">
+                    <i class="bi bi-key"></i>
+                  </span>
+                  <input type="password" class="form-control" id="password" name="password" placeholder="Enter your **** Password">
+                </div>
+                
                 <div class= "text-center mt-3">
                 <button type="submit" value= "Login" class="btn btn-success btn-block">Sign up</button>
                 </div>
