--- a/templates/base.html
+++ b/templates/base.html
@@ -9,49 +9,59 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
+    <!-- Bootstrap Icons CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <title>First Flask Project</title>
+
+    <title>TaskLog</title>
 </head>
 <body>
     <div class= "container" my-3>
         
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/">TaskLog and Project CS 665</a>
+              <a class="navbar-brand" href="/">TaskLog </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/dashboard">Dashboard</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/userdata">About US</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="/register">Create account</a></li>
-                      <li><a class="dropdown-item" href="/">Create your Todo</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                  {% if session.get('user_id') %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="/tasklog"> Create TaskLog</a>
                   </li>
+                  {% endif %}
+
+
+
+                 
                   <li class="nav-item">
                     <a class="nav-link active"></a>
                   </li>
                 </ul>
                 <form class="d-flex">
-                  
-                  <a class="nav-link active" type="submit"><p><b>Email: </b> {{user.email if user else "Guest" }}</p></a>
+                  {% if current_user.is_authenticated %}
+                    <a class="nav-link active">
+                      <p><b>Email:</b> {{ current_user.email }}</p>
+                    </a>
+                  {% else %}
+                    <a class="nav-link active">
+                      <p><b>Welcome, Guest</b></p>
+                    </a>
+                  {% endif %}
                 </form>
+                
               </div>
             </div>
           </nav>
+
+
         </div>
 
 
