--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,7 +40,7 @@
         <div class="bg-white p-4 rounded shadow-sm text-center">
           <h4 class="text-secondary mb-4">Quick Filters</h4>
           <div class="btn-group-vertical w-100" role="group" aria-label="Button group">
-            <a href="/tasklog?filter=all" class="btn btn-outline-dark">User Details</a>
+            <a href="/userdash?filter=all" class="btn btn-outline-dark">User Profile</a>
             <a href="/category/Work" class="btn btn-outline-primary">Work Tasks</a>
             <a href="/category/Personal" class="btn btn-outline-success">Personal Tasks</a>
             <a href="/pending_task?filter=pending" class="btn btn-outline-dark">Pending</a>
