--- a/templates/userdash.html
+++ b/templates/userdash.html
@@ -18,6 +18,11 @@
                 <i class="bi bi-pencil-square me-2"></i> Update Profile
             </a>
         </div>
+        <div class="text-center mt-4">
+            <a href="{{ url_for('dashboard', ) }}" class="btn btn-outline-primary w-100">
+                <i class="bi bi-pencil-square me-2"></i> Back
+            </a>
+        </div>
     </div>
 </div>
 {% endblock body %}
