--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
 
     <title>TaskLog</title>
@@ -45,30 +47,25 @@
                     <a class="nav-link active"></a>
                   </li>
                 </ul>
-                <form class="d-flex">
+                <div class="d-flex align-items-center">
                   {% if current_user.is_authenticated %}
-                    <a class="nav-link active">
-                      <p><b>Email:</b> {{ current_user.email }}</p>
-                    </a>
+                    <span class="nav-user"><i class="fas fa-user-circle me-1"></i> <strong>Email:</strong> {{ current_user.email }}</span>
                   {% else %}
-                    <a class="nav-link active">
-                      <p><b>Welcome, Guest</b></p>
-                    </a>
+                    <span class="nav-user"><i class="fas fa-user-circle me-1"></i> Welcome, Guest</span>
                   {% endif %}
-                </form>
+                </div>
                 
               </div>
             </div>
           </nav>
+          <div class="container">
+            {% block body %}
 
+            {% endblock body %}
 
-      
+          </div>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-
- 
-{% block body %}
-
-{% endblock body %}
         
 </body>
 
