Configuration errors fixed

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
                 <div class= "text-center mt-3">
                 <button type="submit" value= "Login" class="btn btn-success btn-block">Submit</button>
                 </div>
-                <p class="text-center mt-3">Don't have an account? <a href="/user_reg">Sign UP</a></p>
+                <p class="text-center mt-2">Create a new account? <a href="/user_reg">Sign in</a></p>
                 
               </form>
             </div>
